# str8ts-solver

./: Cargo.toml  README.md  Trunk.toml  index.html  index.scss  package-lock.json  package.json  rustfmt.toml  tailwind.config.js
endtoend-tests/: package-lock.json  package.json  playwright.config.ts
endtoend-tests/tests/: example.spec.ts
examples/: generator_benchmark.rs
frontend/: .eslintrc.js  .prettierrc  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: Button.tsx  CopyOnClick.tsx  Error.tsx  Generator.tsx  Header.tsx  Hint.tsx  Importer.tsx  Rating.tsx  SolutionHistory.tsx  index.tsx
frontend/src/app/grid/: Cell.tsx  diffgrid.ts  index.tsx
frontend/src/solver/: generatorWorker.js  solver.ts  wasmTypes.ts
frontend/src/utils/: unreachable.ts  useEvent.ts  zip.ts
solver/: Cargo.toml
solver/benches/: full_solve.rs
solver/src/: bitset.rs  difficulty.rs  generator.rs  grid.rs  lib.rs  puzzle_coding.rs  solve_result.rs  solver.rs  strategy.rs  utils.rs  validator.rs
solver/src/strats/: chain.rs  definite_min_max.rs  enumerate_solutions.rs  fish.rs  guess.rs  medusa.rs  mod.rs  required_and_forbidden.rs  required_range.rs  row_col_brute.rs  sets.rs  setti.rs  setti_min_max.rs  singles.rs  stranded.rs  trivial.rs  unique.rs  unique_requirement.rs  update_impossibles.rs  update_required_and_forbidden.rs  y_wing.rs
solver_wasm/: Cargo.toml  README.md
solver_wasm/src/: lib.rs  wasm_cell.rs  wasm_difficulty.rs  wasm_grid.rs  wasm_solve_result.rs  wasm_validation_result.rs
src/: diffgrid.rs  difficulty.rs  generator.rs  lib.rs  main.rs  utils.rs
src/components/: app.rs  cell.rs  generator.rs  grid.rs  header.rs  importer.rs  mod.rs  puzzle_rating.rs  requirements.rs  requirements_content.rs  solution_history.rs
src/worker/: mod.rs
str8ts_cli/: Cargo.toml
str8ts_cli/src/: lib.rs
