[package]
name = "str8ts-solver"
version = "0.1.0"
edition = "2021"
description = "Str8ts generator and solver"
readme = "README.md"
repository = "https://github.com/jgke/str8ts-solver"
license = "AGPL"
default-run = "str8ts-solver"

[workspace]
members = [ "solver_wasm", "str8ts_cli" ]

[dependencies]
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
str8ts_cli = { path = "str8ts_cli" }

[profile.release]
debug = 1
