[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
log = "0.4.19"
rustc-hash = "1.1.0"
rand_chacha = "0.3.1"
rayon = "1.7.0"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "full_solve"
harness = false
