[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
log = "0.4.19"
rustc-hash = "2.1.1"
rand_chacha = "0.9.0"
rayon = "1.7.0"
rand = "0.9.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "full_solve"
harness = false
